--- a/front/src/app/chat-form/chat-form.component.html
+++ b/front/src/app/chat-form/chat-form.component.html
@@ -2,10 +2,10 @@
 
     <div *ngFor="let message of messages" class="message">
         <ng-container *ngIf="message.type === 'incoming'; else outgoing">
-            <div class="incoming">{{ message.text }}</div>
+            <div class="incoming">{{ message.pseudo }}: {{ message.text }}</div>
         </ng-container>
         <ng-template #outgoing>
-            <div class="outgoing">{{ message.text }}</div>
+            <div class="outgoing">{{ message.pseudo }}: {{ message.text }}</div>
         </ng-template>
     </div>
 </div>
