--- a/front/src/app/login/login.component.scss
+++ b/front/src/app/login/login.component.scss
@@ -1,3 +1,9 @@
+.login{
+background-color: #007bff;
+
+}
+
+
 .login-form {
   background-color: #fff;
   padding: 20px;
@@ -8,7 +14,12 @@
   margin: 0 auto;
 }
 
-/* Center the form horizontally */
+.login-title{
+  text-align: center;
+  margin :0%;
+  background-color: #007bff;
+}
+
 .mat-form-field {
   display: block;
   margin: 10px auto;
@@ -17,5 +28,16 @@
 /* Style the buttons */
 .button-container {
   margin-top: 20px;
-  text-align: center; /* Center the button horizontally */
+  text-align: center; 
+}
+
+.login-noaccount{
+  text-align: center; 
+  padding: 2%;
+}
+
+.login-noaccount:hover {
+  color: #66cd3a;
+  text-decoration:none;
+  cursor: pointer;
 }
