ADD design + list user connected and disconected + scroll to last message

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -6,5 +6,6 @@
   </header>
   <div class="main-content">
     <app-chat-form></app-chat-form>
+    <app-user-list></app-user-list>
   </div>
 </div>
