--- a/front/src/app/chat-form/chat-form.component.html
+++ b/front/src/app/chat-form/chat-form.component.html
@@ -1,4 +1,4 @@
-<div class="chat-container">
+<div class="chat-container"  #chatContainer>
 
     <div *ngFor="let message of messages" class="message">
         <ng-container *ngIf="message.type === 'incoming'; else outgoing">
