--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -14,13 +14,13 @@ body {
     background-color: $dark;
 }
 
-app-chat-form {
-    padding: 0%;
-    margin: 0%;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
+// app-chat-form {
+//     padding: 0%;
+//     margin: 0%;
+//     width: 100vw;
+//     height: 100vh;
+//     overflow: hidden;
+// }
 
 .toast-position {
     position: fixed;
