--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -28,5 +28,34 @@
 /* Styles pour le composant ChatFormComponent */
 .main-content {
   padding: 20px;
+  display: flex;
+  flex-direction: row;
 }
 
+app-chat-form {
+    padding: 0%;
+    margin: 0%;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+app-user-list {
+  padding: 0%;
+  margin-left: 2%;
+  width: 15%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+@media (max-width: 725px) {
+app-user-list {
+    width: 25%;
+  }
+}
+
+@media (max-width: 500px) {
+  app-user-list {
+    width: 35%;
+  }
+}
