--- a/front/src/app/user-list/user-list.component.html
+++ b/front/src/app/user-list/user-list.component.html
@@ -3,7 +3,7 @@
         <h4 class="user-list-title-online">En ligne</h4>
         <ul class="user-list-ul-online">
             <li *ngFor="let user of userOnline">
-                <span class="status-badge" [ngClass]="{ 'online': user.isOnline, 'offline': !user.isOnline }"></span>
+                <span class="status-badge" [ngClass]="{ 'online': !user.isOnline, 'offline': user.isOnline }"></span>
                 {{ user.pseudo }}
             </li>
         </ul>
@@ -14,7 +14,7 @@
         <h4 class="user-list-title-offline">Hors ligne</h4>
         <ul class="user-list-ul-offline">
             <li *ngFor="let user of userOffline">
-                <span class="status-badge" [ngClass]="{ 'online': user.isOnline, 'offline': !user.isOnline }"></span>
+                <span class="status-badge" [ngClass]="{ 'offline': !user.isOnline }"></span>
                 {{ user.pseudo }}
             </li>
         </ul>
