--- a/front/src/app/chat-form/chat-form.component.scss
+++ b/front/src/app/chat-form/chat-form.component.scss
@@ -15,7 +15,7 @@
 
 .incoming {
   background-color: #f0f0f0;
-  padding: 5px;
+  padding: 10px;
   margin: 5px;
   border-radius: 5px;
 }
@@ -23,7 +23,7 @@
 .outgoing {
   background-color: #007bff;
   color: #fff;
-  padding: 5px;
+  padding: 10px;
   margin: 5px;
   border-radius: 5px;
 }
@@ -33,8 +33,9 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 10px;
-  width: 100%;
+  align-items: center;
+  margin-left: 5%;
+  width: 90%;
   padding: 10px;
   height: 4vh;
 }
