--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -2,5 +2,8 @@
     <img src="../../assets/waifu.jpg" height="30px" />
     <span>ChatDirect</span>
     <span class="spacer"></span>
-    <button mat-button (click)="openLoginModal()">Login</button>
+    <div class="btn-wrapper">
+    <button class="btn-login" mat-button (click)="openLoginModal()">Login</button>
+    <button class="btn-logout"  mat-button (click)="logout()">logout</button>
+    </div>
 </div>
